Initisalise repository as Test v0.0.1

--- a/.tools/templates/Welcome_template.ipynb
+++ b/.tools/templates/Welcome_template.ipynb
@@ -5,7 +5,7 @@
    "id": "335f15f8",
    "metadata": {},
    "source": [
-    "# Welcome to PROJECT_NAME! \n",
+    "# Welcome to Test! \n",
     "---\n",
     "\n",
     "## How does it work?\n",
